src/objects/Mass_Merge_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Mass Merge Config Settings</description>
    <fields>
        <fullName>Batch_Contact_Merging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Batch Contact merging for faster merging of contact records.  Uncheck this option if contacts are not merging or errors in the contact merging process.</description>
        <inlineHelpText>Batch Contact merging for faster merging of contact records.  Uncheck this option if contacts are not merging or errors in the contact merging process.</inlineHelpText>
        <label>Batch Contact Merging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_All_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable All Services when checked will disable discovery and merging.  Typically only used for debugging deployments.</description>
        <inlineHelpText>Disable All Services when checked will disable discovery and merging.  Typically only used for debugging deployments.</inlineHelpText>
        <label>Disable All Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Debug_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Debug Logging to write debug level messages to the log table</description>
        <inlineHelpText>Enable Debug Logging to write debug level messages to the log table</inlineHelpText>
        <label>Enable Debug Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Error_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Error Logging to write error level messages to the log table</description>
        <inlineHelpText>Enable Error Logging to write error level messages to the log table</inlineHelpText>
        <label>Enable Error Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Filter__c</fullName>
        <description>Enter text to filter which log messages are written to the database.  Supports single value or comma-separated values.</description>
        <inlineHelpText>Enter text to filter which log messages are written to the database.  Supports single value or comma-separated values.</inlineHelpText>
        <label>Log Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Discover_Having_Count__c</fullName>
        <defaultValue>25</defaultValue>
        <description>Maximum value to use in a having count to find duplicates.  Will only find duplicates up to the max value.  If the value is 20 then won&apos;t find any specific duplicate matches of 21 or more.</description>
        <inlineHelpText>Maximum value to use in a having count to find duplicates.  Will only find duplicates up to the max value.  If the value is 20 then won&apos;t find any specific duplicate matches of 21 or more.</inlineHelpText>
        <label>Maximum Discover Having Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Records_Display__c</fullName>
        <defaultValue>250</defaultValue>
        <description>Maximum number of records to display on the merge candidates pages</description>
        <inlineHelpText>Maximum number of records to display on the merge candidates pages</inlineHelpText>
        <label>Maximum Records Display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Salesforce_Limits_to_Use__c</fullName>
        <defaultValue>65</defaultValue>
        <description>Maximum percentage of Salesforce Limits (e.g., SOQL Queries, CPU Time) to use for a given execution cycle.</description>
        <inlineHelpText>Maximum percentage of Salesforce Limits (e.g., SOQL Queries, CPU Time) to use for a given execution cycle.</inlineHelpText>
        <label>Maximum % Salesforce Limits to Use</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merge_History_Write_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true write all merge fields into merge history otherwise write only fields ignored on the duplicate record.</description>
        <inlineHelpText>When true write all merge fields into merge history otherwise write only fields ignored on the duplicate record.</inlineHelpText>
        <label>Merge History Write All</label>
        <type>Checkbox</type>
    </fields>
    <label>Mass Merge Config</label>
</CustomObject>